dynamic sketchpad area done. brush upon hover, done.

--- a/index.html
+++ b/index.html
@@ -9,32 +9,15 @@
 </head>
 <body>
     <h1>Pixel Sketch: Art at Your Fingertips</h1>
-    <div id="sketch-pad">  
-        <div class="pixel-pad-row">
-            <div class="pixel-pad">
-            </div>   
-            <div class="pixel-pad">
-            </div>  
-            <div class="pixel-pad">
-            </div>  
+    <div id="pixel-sketch-container">
+        <div id="setting-panel">
+            <div id="size-control">
+                <input type="number" id="size-value" placeholder="Pixel Size">
+            </div>
         </div>
-        <div class="pixel-pad-row">
-            <div class="pixel-pad">
-            </div>   
-            <div class="pixel-pad">
-            </div> 
-            <div class="pixel-pad">
-            </div>   
+        <div id="sketch-pad">  
         </div>
-        <div class="pixel-pad-row">
-            <div class="pixel-pad">
-            </div>   
-            <div class="pixel-pad">
-            </div> 
-            <div class="pixel-pad">
-            </div>   
-        </div>
-    </div>
+    </div>    
 <script src="src/script.js"></script>
 </body>
 </html>
