Eraser and Clear tool done

--- a/index.html
+++ b/index.html
@@ -18,11 +18,19 @@
                     <input type="range" id="size-value" placeholder="Pixel Size" value="16" min="1" max="100">
                 </div>                
                 <div id="brush-control-container">
-                    <label for="color-label">Brush Color</label>
+                    <label for="brush-color-value">Brush Color</label>
                     <input type="color" id="brush-color-value">
                     <button id="btn-brush-rainbow">
                         Rainbow Brush 
                         <!-- Not Yet Working -->
+                    </button>
+                </div>
+                <div id="remove-color-control-container">
+                    <button id="eraser-btn">
+                        Eraser
+                    </button>
+                    <button id="clear-btn">
+                        Clear
                     </button>
                 </div>
             </div>
