Button Activation in progress

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>                
                 <div id="brush-control-container">                    
                     <input type="color" id="brush-color-value">
-                    <label for="brush-color-value" class="btn" id="brush-color-label">Brush Color</label>                    
+                    <label for="brush-color-value" class="btn active-btn" id="brush-color-label">Brush Color</label>                    
                     <button class="btn" id="btn-brush-rainbow">
                         Rainbow Brush 
                         <!-- Not Yet Working -->
