Buttons for color brushes functioning successfully

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
                 </div>                
                 <div id="brush-control-container">                    
                     <input type="color" id="brush-color-value">
-                    <label for="brush-color-value" class="btn active-btn" id="brush-color-label">Brush Color</label>                    
+                    <label class="btn-toggle active-btn" id="brush-color-label">Brush Color</label>                    
                     <button class="btn" id="btn-brush-rainbow">
                         Rainbow Brush 
                         <!-- Not Yet Working -->
                     </button>
                 </div>
                 <div id="remove-color-control-container">
-                    <button class="btn" id="eraser-btn" >
+                    <button class="btn-toggle" id="eraser-btn" >
                         Eraser
                     </button>
                     <button class="btn" id="clear-btn">
